First commit of styled components, fix container wrapping and sizes styling

--- a/reactapp/src/components/expense/crud/ExpenseContainer.css
+++ b/reactapp/src/components/expense/crud/ExpenseContainer.css
@@ -4,7 +4,6 @@
   border-radius: 0.5em;
   margin: 1em;
   padding: 1em;
-  height: 100%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
